<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/btnAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/flecha"
            android:textSize="30sp"
            android:backgroundTint="@color/red"/>

        <Button
            android:id="@+id/btnFoto"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="@string/espacio"
            android:textSize="40sp"
            android:backgroundTint="@color/white"/>

        <Button
            android:id="@+id/btnAceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/tick"
            android:textSize="30sp"
            android:backgroundTint="@color/green"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>